--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "cra-template-codepunk",
+  "name": "react-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://neekit95.github.io/todo-list",
   "license": "MIT",
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -25,16 +26,20 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": [
     "defaults",
     "not IE 11"
   ],
-  "homepage": ".",
   "development": [
     "last 1 chrome version",
     "last 1 firefox version",
     "last 1 safari version"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
+  }
 }
